--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 <body>
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div id="debug" style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center" >v18 </div>
+            <div id="debug" style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center" >v19 </div>
 
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()">Back</div>
@@ -88,13 +88,16 @@
 
                                         <ul class="grid twelve box task-list">
 
-                                            <li ng-repeat="tasks in taskLiskData.tasks | orderBy:'taskorder'" ng-click="gotoMessages($index, tasks.taskid, 'forward')">
+                                            <li ng-repeat="tasks in taskLiskData.tasks | orderBy:'taskorder'" ng-click="loadMessages($index, tasks.taskid, 'forward', tasks.isenabled)" ng-class=taskActive(tasks.isenabled)>
                                                 <div class="ten cell center-cell">
-                                                    <div class="task-text">{{tasks.description}}</div>
+                                                    <div class="task-text">{{tasks.description}}
+                                                        <!--<br><small style="font-size:9px">isenabled: {{tasks.isenabled}}, hasmodresp: {{tasks.hasmodresp}}</small>-->
+                                                    </div>
+
                                                 </div>
                                                 <div class="task-icon-status two cell"  >
 
-                                                        <div ng-hide="tasks.clicked" ng-class="getTaskStatusClass(tasks.complete)"></div>
+                                                        <div ng-hide="tasks.clicked" ng-class="getTaskStatusClass(tasks.isenabled, tasks.hasmodresp)"></div>
 
                                                         <div ng-show="tasks.clicked" class="icon-spinner5 spin-loader"></div>
                                                 </div>
