--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,10 @@
 <body>
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div id="debug" style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center" >v22</div>
+            <div id="debug" style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center" >v22 {{unreadMessages}}, {{allowPolling}}</div>
 
             <div class="row nav-top">
-                <div class="grid three pull" ng-click="goBack()" ng-show->Back</div>
+                <div class="grid three pull" ng-click="goBack()" ng-show->Back</div>    
                 <div class="grid three push" ng-click="logOut()">Logout</div>
             </div>
 
@@ -37,9 +37,9 @@
             <div class="row nav-bottom" id="bottom-nav" ng-click="testTrans()">
 
                 <ul id="global-controls">
-                    <li class="grid four icon-user" ng-click="openUserPanel()"></li>
-                    <li class="pingClass grid four icon-bubbles2" ng-class="{'pingNotification': unreadMessages}"><div id="notification">!</li></li>
-                    <li class="grid four push icon-info" ng-click="openInfoPanel()"></li>
+                    <li class="grid icon-user" ng-class="getFooterSectionClass()" ng-click="openUserPanel()"></li>
+                    <li ng-show="unreadMessages" class="pingClass grid four icon-bubbles2" ng-class="{'pingNotification': unreadMessages}"><div id="notification">!</li></li>
+                    <li class="grid push icon-info" ng-class="getFooterSectionClass()" ng-click="openInfoPanel()"></li>
                 </ul>
 
             </div>
