--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,10 @@
 <body>
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div id="debug" style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center" >v27</div>
+            <div id="debug" style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center" >v28 - {{showBack}} - {{liveScreen}}</div>
 
             <div class="row nav-top">
-                <div class="grid three pull" ng-click="goBack()" ng-show->Back</div>    
+                <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
                 <div class="grid three push" ng-click="logOut()">Logout</div>
             </div>
 
@@ -214,7 +214,7 @@
                                                 </div>
                                             </div>
 
-                                            <button style="display:none" class="buttonStyle selectButton" id="backToMessages" ng-click="backToMessages()">Back to Messages</button>
+                                            <button style="display:none" class="buttonStyle selectButton" id="backToMessages" ng-click="backToMessages()">Back to tasks</button>
 
                                             <div class="clear_both"></div>
                                             <div style="display:none">
