--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,8 @@
 <body>
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v31.4</div>
-
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v31.5</div>
+            <div id="debug"></div>
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
                 <div class="grid three push" ng-click="logOut()">Logout</div>
