--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <link href="css/icons.css" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/uploader.css" rel="stylesheet" type="text/css" />
+    <<link href="http://www.gs0.co/tts/css/remote.css" rel="stylesheet" type="text/css" />>
 
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui-1.9.2.min.js"></script>
@@ -22,7 +23,7 @@
 <body>
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v31.5</div>
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v31.6</div>
             <div id="debug"></div>
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
