--- a/www/index.html
+++ b/www/index.html
@@ -72,13 +72,14 @@
 
                                             <a class="form-link animate-hide" onclick="window.open('http://explore.thethinkingshed.com/en/password_reset', '_blank', 'location=yes'); return false;)" ng-hide="loggingIn">Lost your password?</a>
                                             <br>
-                                            <a ng-click="openInExternalBrowser()">Test Link - external browser</a>
-                                            <br>
+                                            
                                             <a ng-click="openInAppBrowser()">Test Link - in app browser</a>
+                                            <br>
+                                            <!--  <a ng-click="openInExternalBrowser()">Test Link - external browser</a>
                                             <br>
                                             <a ng-click="openCordovaWebView()">Test Link - web view</a>
 
-                                            <div ng-show="loggingIn" class="icon-spinner5 spin-loader animate-hide"></div>
+                                            <div ng-show="loggingIn" class="icon-spinner5 spin-loader animate-hide"></div>-->
 
                                         </form>
 
