--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v31.10</div>
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v31.12</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
@@ -73,7 +73,7 @@
                                             <a class="form-link animate-hide" onclick="window.open('http://explore.thethinkingshed.com/en/password_reset', '_blank', 'location=yes'); return false;)" ng-hide="loggingIn">Lost your password?</a>
                                             <br>
                                             
-                                            <a ng-click="openInAppBrowser()">Test Link - in app browser</a>
+                                            <a onclick="openInAppBrowser()">Test Link - in app browser</a>
                                             <br>
                                             <!--  <a ng-click="openInExternalBrowser()">Test Link - external browser</a>
                                             <br>
