--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v33</div>
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v35</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
 
             <div class="row nav-top">
@@ -72,14 +72,9 @@
 
                                             <a class="form-link animate-hide" onclick="window.open('http://explore.thethinkingshed.com/en/password_reset', '_blank', 'location=yes'); return false;)" ng-hide="loggingIn">Lost your password?</a>
                                             <br>
-                                            
-                                            <!--<button onclick="openInAppBrowser()">Test Link - in app browser</button>
-                                            <br>
-                                              <a ng-click="openInExternalBrowser()">Test Link - external browser</a>
-                                            <br>
-                                            <a ng-click="openCordovaWebView()">Test Link - web view</a>
 
-                                            -->
+                                            <br>                                            
+                                            <a onclick="openInAppBrowser()">Test Link - in app browser</a>
 
                                             <div ng-show="loggingIn" class="icon-spinner5 spin-loader animate-hide"></div>
 
