--- a/www/index.html
+++ b/www/index.html
@@ -16,13 +16,13 @@
     <script src="js/angular.min.js"></script>
     <script src="js/angular-sanitize.js"></script>
 
-    <script src="js/cordova.js"></script>
+    <script src="cordova.js"></script>
     
  </head>
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v35</div>
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v35.1</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
 
             <div class="row nav-top">
