--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v38.6</div>
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v38.7</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
 
             <div class="row nav-top">
@@ -71,11 +71,9 @@
                                             <button ng-click="appLogin()" class="btn-primary animate-hide" href="#" id="login-button" ng-hide="loggingIn"><p class="btn-icon btn-arrow">Log in</p></button>
 
 
-                                            <a class="form-link animate-hide" onclick="window.open('http://explore.thethinkingshed.com/en/password_reset', '_blank', 'location=yes'); return false;)" ng-hide="loggingIn">Lost your password?</a>
+                                            <a class="form-link animate-hide" onclick="openSystemBrowser('http://explore.thethinkingshed.com/en/password_reset')" ng-hide="loggingIn">Lost your password?</a>
                                             <br>
                                             
-                                            <a onclick="openInAppBrowser()">Open Browser</a>
-                                            <a onclick="openSystemBrowser()">System browser</a>
 
                                             <div ng-show="loggingIn" class="icon-spinner5 spin-loader animate-hide"></div>
 
