--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v38.7</div>
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v39</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
 
             <div class="row nav-top">
@@ -56,14 +56,14 @@
 
                                     <div class="grid twelve center">
 
-                                        <img class="logo" src="images/logo.png">
+                                        <h3>Hello, please login</h3>
 
                                         <form class="text-input">
 
-                                            <input autocomplete='on' ng-model="username" ng-class="{'inputError': loginError}" class="twelve" type="text" value="sdfsdf" placeholder="Enter your name">
+                                            <input autocomplete='on' ng-model="username" ng-class="{'inputError': loginError}" class="twelve form-username" type="text" value="sdfsdf" placeholder="Enter your name">
                                             <label for="login-name"></label>
 
-                                            <input ng-model="password" ng-class="{'inputError': loginError}" class="twelve" type="password" value="" placeholder="Password">
+                                            <input ng-model="password" ng-class="{'inputError': loginError}" class="twelve form-password" type="password" value="" placeholder="Password">
                                             <label for="login-pass"></label>
 
                                             <p class="form-error" ng-show="loginError">Please enter a valid username and password</p>
@@ -283,7 +283,7 @@
                    
                     <div class="row">
                         <div class="grid twelve">
-                            <button class="buttonStyle btn-tertiary" ng-click="openInfoPanel()">Close</button>
+                            <div class="infoPanelLogo"></div>
                             <h2>{{project_name}}</h2>
                             <p class="info-boldText">{{project_description}}</p>
                             <hr>
@@ -293,6 +293,7 @@
                             <p class="descriptionText" ng-bind-html="project_what"></p>
                             <p class="info-boldText">Other instructions</p>
                             <p class="descriptionText" ng-bind-html="project_other"></p>
+                            <button class="buttonStyle btn-tertiary" ng-click="openInfoPanel()">Close</button>
                         </div>
                     </div>
 
