--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v39</div>
+            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v40</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
 
             <div class="row nav-top">
@@ -294,6 +294,7 @@
                             <p class="info-boldText">Other instructions</p>
                             <p class="descriptionText" ng-bind-html="project_other"></p>
                             <button class="buttonStyle btn-tertiary" ng-click="openInfoPanel()">Close</button>
+                            <a href="http://www.google.com">Test link</a>
                         </div>
                     </div>
 
