--- a/www/index.html
+++ b/www/index.html
@@ -264,7 +264,7 @@
                     <div class="row">
                         <div class="grid twelve">
                             
-                            <h2>Your information</h2>
+                            <!--<h2>Your information</h2>
 
                             <p>Full Name</p>
                             <h3>{{user_fullName}}</h3>
@@ -275,6 +275,10 @@
                             <img ng-src="{{user_userProfile}}" />
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
+
+                            -->
+
+                            <div id="appTrace">{{appTrace}}</div>
                             
                         </div>
                     </div>
