--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; top:0; z-index:99999; padding-top:20px; width:100%, text-align:center">v52</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v53</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
 
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99997; padding-top:50px; width:100%, text-align:right; display:none" id="fileURL"></div>
@@ -100,7 +100,6 @@
                                             <li ng-repeat="tasks in taskLiskData.tasks | orderBy:'taskorder'" ng-click="loadMessages($index, tasks.taskid, 'forward', tasks.isenabled)" ng-class=taskActive(tasks.isenabled)>
                                                 <div class="ten cell center-cell">
                                                     <div class="task-text" ng-bind-html="deliberatelyTrustDangerousSnippet(tasks.description)">
-                                                        <!--<br><small style="font-size:9px">isenabled: {{tasks.isenabled}}, hasmodresp: {{tasks.hasmodresp}}</small>-->
                                                     </div>
 
                                                 </div>
