--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v57</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v58</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
 
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99997; padding-top:50px; width:100%, text-align:right; display:none" id="fileURL"></div>
@@ -298,7 +298,6 @@
                    
                     <div class="row">
                         <div class="grid twelve">
-                            <button class="buttonStyle btn-tertiary" ng-click="openInfoPanel()">Close</button>
                             <div class="infoPanelLogo"></div>
                             <h2>{{project_name}}</h2>
                             <hr>
@@ -308,7 +307,7 @@
                             <p class="descriptionText" ng-bind-html="project_what"></p>
                             <p class="info-boldText">Other instructions</p>
                             <p class="descriptionText" ng-bind-html="project_other"></p>
-                            <button class="buttonStyle btn-tertiary" ng-click="openInfoPanel()">Close</button>
+                            <button class="buttonStyle btn-tertiary" ng-click="openInfoPanel()">Continue</button>
                         </div>
                     </div>
 
