--- a/www/index.html
+++ b/www/index.html
@@ -198,9 +198,13 @@
                                                 <div style="width:100%; text-align:center"><img class="grid twelve" id="preview" /></div>
 
                                                 <div id="androidMediaButtons">
-                                                    <button class="buttonStyle selectButton" id="uploadVideoButton" onclick="captureVideo()" style="width:49%; clear:none; float:left">Add Video</button>
+                                                    <button class="buttonStyle selectButton" id="uploadVideoButton" onclick="captureVideo()" style="width:49%; clear:none; float:left">Record Video</button>
 
-                                                    <button class="buttonStyle selectButton" id="uploadPhotoButton" onclick="captureImage()" style="width:49%; float:right; clear:none">Add Photo</button>
+                                                    <button class="buttonStyle selectButton" id="uploadPhotoButton" onclick="captureImage()" style="width:49%; float:right; clear:none">Take Photo</button>
+
+                                                    <button class="buttonStyle selectButton" id="selectPhotoButton" onclick="capturePhoto()" style="width:49%; float:right; clear:none">Select from library</button>
+
+                                                    
                                                 </div>
 
 
