--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="Content-Security-Policy"/>
     <meta charset="utf-8" />
-    <title>TTS App  v1</title>
+    <title>TTS App  v59</title>
 
     <link href="css/icons.css" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -21,8 +21,8 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v58</div>
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug"></div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v59</div>
+            <div  style="font-size:12px; position:fixed; bottom:70; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug">Debug</div>
 
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99997; padding-top:50px; width:100%, text-align:right; display:none" id="fileURL"></div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99996; padding-top:70px; width:100%, text-align:right; display:none" id="fileType"></div>
@@ -202,20 +202,14 @@
 
                                                     <button class="buttonStyle selectButton" id="uploadPhotoButton" onclick="captureImage()" style="width:49%; float:right; clear:none">Take Photo</button>
 
-                                                    <button class="buttonStyle selectButton" id="selectPhotoButton" onclick="capturePhoto()" style="width:49%; float:right; clear:none">Select from library</button>
-
-                                                    
+                                                    <button class="buttonStyle selectButton" id="selectPhotoButton" onclick="capturePhoto()" style="width:100%; float:right; clear:none">Select from library</button>
                                                 </div>
-
 
                                                 <div id="iosMediaButtons">
                                                     <button class="buttonStyle selectButton" id="selectFileTrigger" >Add media</button>
 
                                                     <input type="file" ng-model="mediaFile" name="file" accept="video/*;capture=camera" id="image_file" ng-click="resetMediaFile()" onChange="fileSelected_iOS();" class="selectButtonHidden"/>
                                                 </div>
-
-
-
 
                                                 <button class="btn-primary twelve btn-disabled" ng-click="submitMessage()" id="uploadFileTrigger"><p class="btn-icon btn-arrow">Submit</p></button>
 
