--- a/www/index.html
+++ b/www/index.html
@@ -21,12 +21,12 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v59</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v60</div>
             <div  style="font-size:12px; position:fixed; bottom:70; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug">Debug</div>
 
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99997; padding-top:50px; width:100%, text-align:right; display:none" id="fileURL"></div>
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99996; padding-top:70px; width:100%, text-align:right; display:none" id="fileType"></div>
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99995; padding-top:90px; width:100%, text-align:right; display:none" id="fileName"></div>
+            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99997; padding-top:50px; width:100%, text-align:right; display:block" id="fileURL">fileURL</div>
+            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99996; padding-top:70px; width:100%, text-align:right; display:block" id="fileType">fileType</div>
+            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99995; padding-top:90px; width:100%, text-align:right; display:block" id="fileName">fileName</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99994; padding-top:90px; width:100%, text-align:right; display:none" id="platform">platform</div>
 
             <div class="row nav-top">
