--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,8 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v75</div>
-            <div  style="font-size:12px; position:fixed; bottom:70; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right" id="debug">Debug</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v76</div>
+            <div  style="font-size:12px; position:fixed; bottom:70; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right; display:none" id="debug">Debug</div>
 
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99997; padding-top:50px; width:100%, text-align:right; display:none" id="fileURL">fileURL</div>
             <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99996; padding-top:70px; width:100%, text-align:right; display:none" id="fileType">fileType</div>
