--- a/www/index.html
+++ b/www/index.html
@@ -21,13 +21,8 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v76</div>
-            <div  style="font-size:12px; position:fixed; bottom:70; right:0; z-index:99998; padding-top:20px; width:100%, text-align:right; display:none" id="debug">Debug</div>
-
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99997; padding-top:50px; width:100%, text-align:right; display:none" id="fileURL">fileURL</div>
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99996; padding-top:70px; width:100%, text-align:right; display:none" id="fileType">fileType</div>
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99995; padding-top:90px; width:100%, text-align:right; display:none" id="fileName">fileName</div>
-            <div  style="font-size:12px; position:fixed; top:0; right:0; z-index:99994; padding-top:90px; width:100%, text-align:right; display:none" id="platform">platform</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v77</div>
+            
 
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
@@ -286,6 +281,13 @@
                             <img ng-src="{{user_userProfile}}" />
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
+
+                            <div  style="font-size:12px" id="debug">Debug</div>
+
+                            <div  style="font-size:12px;" id="fileURL">fileURL</div>
+                            <div  style="font-size:12px;" id="fileType">fileType</div>
+                            <div  style="font-size:12px;" id="fileName">fileName</div>
+                            <div  style="font-size:12px;" id="platform">platform</div>
 
                         </div>
                     </div>
