--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v77</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v78</div>
             
 
             <div class="row nav-top">
@@ -266,7 +266,7 @@
 
                 </div>
 
-                <div ng-show="viewUserPanel" class="appPanel">               
+                <div ng-show="viewUserPanel" class="appPanel" style="height:2000px">               
                    
                     <div class="row">
                         <div class="grid twelve">
@@ -288,6 +288,8 @@
                             <div  style="font-size:12px;" id="fileType">fileType</div>
                             <div  style="font-size:12px;" id="fileName">fileName</div>
                             <div  style="font-size:12px;" id="platform">platform</div>
+
+                            <button class="buttonStyle btn-tertiary" onclick="submitDebug()">Submit Debug</button>
 
                         </div>
                     </div>
