--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v78</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v79</div>
             
 
             <div class="row nav-top">
@@ -282,14 +282,16 @@
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
 
-                            <div  style="font-size:12px" id="debug">Debug</div>
+                            <button class="buttonStyle btn-tertiary" onclick="submitDebug()">Submit Debug</button>
+
+                            <div  style="font-size:12px display:inline-block" id="debug">Debug</div>
 
                             <div  style="font-size:12px;" id="fileURL">fileURL</div>
                             <div  style="font-size:12px;" id="fileType">fileType</div>
                             <div  style="font-size:12px;" id="fileName">fileName</div>
                             <div  style="font-size:12px;" id="platform">platform</div>
 
-                            <button class="buttonStyle btn-tertiary" onclick="submitDebug()">Submit Debug</button>
+                            
 
                         </div>
                     </div>
