--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v79</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v80</div>
             
 
             <div class="row nav-top">
@@ -282,7 +282,7 @@
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
 
-                            <button class="buttonStyle btn-tertiary" onclick="submitDebug()">Submit Debug</button>
+                            <button class="buttonStyle btn-primary" id="debugButton" onclick="submitDebug()">Submit Debug</button>
 
                             <div  style="font-size:12px display:inline-block" id="debug">Debug</div>
 
