--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v82</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v83</div>
             
 
             <div class="row nav-top">
@@ -284,7 +284,7 @@
 
                             <button class="buttonStyle btn-primary" id="debugButton" onclick="submitDebug()">Submit Debug</button>
 
-                            <div  style="font-size:12px display:inline-block" id="debug">Debug</div>
+                            <div  style="font-size:12px display:none" id="debug">Debug</div>
 
                             <div  style="font-size:12px; display:none" id="fileURL">fileURL</div>
                             <div  style="font-size:12px; display:none" id="fileType">fileType</div>
