--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v85</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v86</div>
             
 
             <div class="row nav-top">
@@ -291,7 +291,7 @@
                             <div  style="font-size:12px; display:none" id="platform">platform</div>
 
                              <form action="http://www.gs0.co/tts/debug.php" method="post">
-                              <textarea  id="debugText" type="text" name="debug" value="debug"></textarea>
+                              <textarea  style="width:100%; margin-bottom:10px" id="debugText" type="text" name="debug" value="debug"></textarea>
                               <input class="buttonStyle btn-primary" id="debugButton" type="submit" value="Submit">
                             </form> 
 
