--- a/www/index.html
+++ b/www/index.html
@@ -202,7 +202,7 @@
                                                 <div id="iosMediaButtons">
                                                     <button class="buttonStyle selectButton" id="selectFileTrigger" >Add media</button>
 
-                                                    <input type="file" ng-model="mediaFile" name="file" accept="video/*;capture=camera" id="image_file" ng-click="resetMediaFile()" onChange="fileSelected_iOS();" class="selectButtonHidden"/>
+                                                    <input type="file" ng-model="mediaFile" name="file" accept="video/*;capture=camera" id="image_file" onChange="fileSelected_iOS();" class="selectButtonHidden"/>
                                                 </div>
 
                                                 <button class="btn-primary twelve btn-disabled" ng-click="submitMessage()" id="uploadFileTrigger"><p class="btn-icon btn-arrow">Submit</p></button>
