--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
             <!--<div class="app-screen screen-fader-hide" id="fader"></div>-->
             <div id="appContainer">
 
-                            <div class=" screen-login" id="screen-login">
+                            <div class="app-screen screen-login" id="screen-login">
                                 <p>TEST</p>
                                 <div class="row">
 
